--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,3 +1,11 @@
+h2, p, div, body, html, a, strong {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  text-indent: 2em;
+}
 .text-center {
   text-align: center;
 }
