--- a/src/directive/noData.less
+++ b/src/directive/noData.less
@@ -2,7 +2,7 @@
   position: relative;
 
   &:after {
-    content: '暂无数据';
+    content: attr(data-empty-text);
     position: absolute;
     top: 0;
     left: 0;
